<resources>
    <string name="app_name">跬步</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="new_password">新密码</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="password_hint">请输入密码</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="re_password_hint">请再次输入密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="introduction_hint">介绍下自己呗</string>
    <string name="main_page">首页</string>
    <string name="trip_note">游记</string>
    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="liked">赞过</string>
    <string name="commented">评论过</string>
    <string name="about">开发者</string>
    <string name="forget_password">？忘记密码</string>
    <string name="register_user">注册账号</string>
    <string name="create_note">新建游记</string>
    <string name="Internet_error">网络连接出错</string>
    <string name="date_none">没有更多数据</string>
    <string name="load_more">上拉加载更多</string>
    <string name="loading">正在加载中......</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="modify_password">修改密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="invisible">不显示</string>
    <string name="personal">个人信息</string>
    <string name="modify_personal">修改信息</string>
    <string name="complete">完成</string>
    <string name="add">新增</string>
    <string name="article_hint">分享你的旅游经历......</string>
    <string name="publish">发布</string>
    <string name="about_name">Reed</string>
    <string name="about_university">南京信息工程大学</string>
    <string name="about_academy">计算机与软件学院</string>
    <string name="about_major">计算机科学与技术</string>
    <string name="about_weiBo">\@苇博世界</string>
    <string name="about_email">13813005628@163.com</string>
    <string name="about_motto">明德格物、立己达人、追求真理、自强不息</string>
    <string name="please_login">请先登录账号</string>
    <string name="travel_name">游记名称</string>
    <string name="travel_introduction">简单介绍下你的旅行吧.....</string>
    <string name="confirm">确认</string>
    <string name="forget_password_hint">请输入邮箱后，系统会将重置密码发至您的邮箱，请利用重置密码登陆后修改密码</string>
    <string name="create">创建</string>
    <string name="old_password">原密码</string>
    <string name="setting">设置</string>
    <string name="exit">退出登录</string>
    <string name="clear_cache">清除图片缓存</string>
    <string name="search">请输入你想去的地方</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="travel_information">游记简介</string>
    <string name="add_comment">添加评论</string>
    <string name="about_weiBo_logo">\@阿阿阿阿帆ing（Logo设计）</string>
    <string name="thanks">感谢以下朋友提供支持</string>
    <string name="about_weiBo_guide">\@喵姑大大（App设计指导）</string>
    <string name="finish_travel">结束行程</string>
</resources>
