<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_main_page"
            android:checked="true"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/main_page"/>
        <item
            android:id="@+id/drawer_trip_note"
            android:icon="@drawable/ic_class_24dp"
            android:title="@string/trip_note"/>
        <item
            android:id="@+id/drawer_collection"
            android:icon="@drawable/ic_favorite_outline_24dp"
            android:title="@string/collection"/>
        <!--<item
            android:id="@+id/drawer_liked"
            android:icon="@mipmap/like"
            android:title="@string/liked"/>
        <item
            android:id="@+id/drawer_commented"
            android:icon="@mipmap/comment"
            android:title="@string/commented"/>-->
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info_outline_24dp"
            android:title="@string/about"/>
    </group>
</menu>