<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FBE7"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/tv_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/old_password"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/new_password"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/re_password"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/re_password_hint"
            android:layout_marginStart="16dp"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>


</LinearLayout>
