<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_forget_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:hint="@string/email_hint"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="onClick"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/confirm"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/forget_password_hint"
        android:textColor="#989898"
        android:textSize="14sp"/>

</LinearLayout>
